# Chimeraforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Modelfile_gpt_oss  PRODUCT_SPEC.md  README.md  SECURITY.md  pyproject.toml  requirements-observability.txt  requirements.txt
experiments/research/tr109/rust_agent/: Cargo.toml  README.md  run_tr109_sweep.ps1
experiments/research/tr109/rust_agent/Demo_rust_agent_out/data/: metrics.json
experiments/research/tr109/rust_agent/Demo_rust_agent_out_v2/data/: metrics.json
experiments/research/tr109/rust_agent/Demo_rust_agent_out_v2/reports/: comparison_report.md
experiments/research/tr110/rust_multiagent/: Cargo.toml  README.md  run_tr110_sweep.ps1
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_parity_test/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_parity_test/run_1/: collector_report.md  combined_report.md  insight_report.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/baseline_gpu80_ctx512_temp0p8/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/baseline_gpu80_ctx512_temp0p8/run_1/: collector_report.md  combined_report.md  insight_report.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx1024_temp0p6/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx1024_temp0p6/run_1/: collector_report.md  combined_report.md  insight_report.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx1024_temp0p8/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx1024_temp0p8/run_1/: collector_report.md  combined_report.md  insight_report.md  metrics.json
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx512_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx512_temp0p6/run_1/: collector_report.md  combined_report.md  insight_report.md  metrics.json
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx512_temp0p8/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu120_ctx512_temp0p8/run_1/: metrics.json  (+3 more)
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu60_ctx1024_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu60_ctx1024_temp0p8/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu60_ctx512_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu60_ctx512_temp0p8/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu80_ctx1024_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu80_ctx1024_temp0p8/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu80_ctx512_temp0p6/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/bvc_gpu80_ctx512_temp0p8/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/hetero_het_g60c512t06__g120c1024t08/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/hetero_het_g80c512t08__g120c1024t06/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/homo_gpu80_ctx1024_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/homo_gpu80_ctx1024_temp0p8/: summary.json  summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/homo_gpu80_ctx512_temp0p6/: summary.md
experiments/research/tr110/rust_multiagent/Demo_rust_multiagent_results/homo_gpu80_ctx512_temp0p8/: summary.md
experiments/research/tr110/rust_multiagent/pipelines/dual_ollama_phase1/: README.md
experiments/research/tr110/rust_multiagent/runs/tr110_rust/: summary.md
experiments/research/tr110/rust_multiagent/src/: http_client_hyper.rs  main.rs
(+9307 files in other folders)
