[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimeraforge"
version = "0.2.1"
description = "LLM deployment optimizer — backed by 70,000+ real measurements on consumer GPUs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ChimeraForge Team" }]
keywords = ["llm", "inference", "benchmark", "deployment", "gpu", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
]

[project.scripts]
chimeraforge = "chimeraforge.cli:app"

[project.urls]
Homepage = "https://github.com/Sahil170595/Chimeraforge"
Repository = "https://github.com/Sahil170595/Chimeraforge"

[project.optional-dependencies]
bench = ["psutil>=5.9", "pyyaml>=6.0,<7.0", "httpx>=0.25", "platformdirs>=4.0,<5.0", "structlog>=23.0"]
eval = ["evaluate>=0.4"]
refit = ["numpy>=1.24,<3.0", "scipy>=1.11,<2.0"]
dev = ["pytest>=7.4,<9.0", "pytest-cov>=4.1,<6.0", "pytest-asyncio>=0.21,<1.0", "ruff>=0.3,<1.0"]
all = ["chimeraforge[bench,eval,refit,dev]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chimeraforge*"]

[tool.setuptools.package-data]
"chimeraforge.planner" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py310"
line-length = 100
