[package]
name = "demo_rust_agent"
version = "0.1.0"
edition = "2021"
authors = ["Banterhearts Team"]
description = "Rust variant of the Chimera demo agent: Ollama calls, TTFT/throughput metrics, reports"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rustc_version_runtime = "0.3"
hostname = "0.4"
csv = "1"
walkdir = "2"

[dev-dependencies]
criterion = "0.5"

